# rust-web

./: Cargo.toml
http/src/: httprequest.rs  httpresponse.rs
httpserver/: Cargo.toml
httpserver/data/: orders.json
httpserver/public/: 404.html  health.html  index.html
httpserver/src/: handler.rs  main.rs  router.rs
tcpclient/src/: main.rs
tcpserver/: Cargo.toml
tcpserver/src/: handler.rs  main.rs  router.rs  server.rs
webservice/: Cargo.toml
webservice/src/: handlers.rs  models.rs  routers.rs  state.rs
